--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@ion-phaser/react": "^1.3.0",
     "@openzeppelin/contracts": "^4.4.1",
+    "dotenv": "^10.0.0",
     "next": "^12.0.7",
+    "phaser": "^3.55.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spring": "^9.3.3",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "dev": "next dev",
