--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^17.0.2",
     "react-loaders": "^3.0.1",
     "react-lottie": "^1.2.3",
+    "react-spring": "^9.3.3",
+    "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^8.1.0",
     "react-tooltip": "^4.2.21"
   },
@@ -39,6 +41,7 @@
     "start": "next start",
     "lint": "next lint",
     "run-contract": "npx hardhat run scripts/run.ts",
+    "node": "npx hardhat node",
     "deploy-contract": "npx hardhat run scripts/deploy.ts"
   }
 }
